test/libsolidity/syntaxTests/nameAndTypeResolution/inheriting_from_library.sol
library Lib {}
contract Test is Lib {}
// ----
// TypeError: (32-35): Libraries cannot be inherited from.
